Story/sr 26 vehicle model (#18)
Co-authored-by: Andrey Shipulya <akshipulya@gmail.com>
Co-authored-by: Aleksey Popok <alexeypopok.pl@gmail.com>